--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,8 @@
+<app-nav></app-nav>
 
-
-<h1>{{ title }}</h1>
-
-<ul>
-    <li *ngFor="let user of users"> {{ user.id }} {{ user.userName }}</li>
-</ul>
+<div class="container" style="margin-top: 100px;">
+    <!-- <ul>
+        <li *ngFor="let user of users"> {{ user.id }} {{ user.userName }}</li>
+    </ul> -->
+    <app-home></app-home>
+</div>
