--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,5 +4,8 @@
     <!-- <ul>
         <li *ngFor="let user of users"> {{ user.id }} {{ user.userName }}</li>
     </ul> -->
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
+
+    <!-- DE ESTE MODO SABE ANGULAR QUE TENEMOS PREDEFINIDAS LOS ROUTING EN LA APP -->
+    <router-outlet></router-outlet>
 </div>
