--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,7 @@
+<ngx-spinner type="square-jelly-box">
+    <h3>Cargando...</h3>
+</ngx-spinner>
+
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 100px;">
